fix description margins on mobile

--- a/style.scss
+++ b/style.scss
@@ -490,7 +490,7 @@ html {
 				}
 
 				@media screen and (max-width: $phone-breakpoint) {
-					margin-bottom: 2rem;
+					// margin-bottom: 2rem;
 					margin-top: 1rem;
 				}
 
@@ -578,7 +578,7 @@ html {
 				}
 
 				@media screen and (max-width: $phone-breakpoint) {
-					margin-bottom: 2rem;
+					// margin-bottom: 2rem;
 					margin-top: 1rem;
 				}
 
